--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,22 @@ mixins
     align-items: $align;
     flex-direction: $direction;
 }
+@mixin btn {
+    padding: 20px 40px;
+    font-size: 1rem;
+    background: $pink;
+    color: $bela;
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    margin-top: 20px;
+    border-radius: 40px;
+    letter-spacing: 2px;
+    &:hover {
+        background: $violet;
+        transition: $transition;
+    }
+}
 /******************************
 basic styles
 ******************************/
@@ -54,6 +70,14 @@ a {
         color: $pink;
     }
 }
+.container {
+    width: 80%;
+    margin: auto;
+}
+h2 {
+    font-size: 3rem;
+    line-height: 1.1;
+}
 /*********
 nav
 *********/
@@ -84,5 +108,43 @@ footer {
     a {
         margin: 0 20px;
         font-size: 1.2rem;
+    }
+}
+/*********
+header
+*********/
+.mainHeader {
+    background: $tamnoPlava;
+    color: $bela;
+    padding: 0 60px;
+    @include flex(space-between, center, row);
+    div {
+        flex: 0 0 45%;
+        img {
+            width: 100%;
+            padding: 30px 0;
+        }
+        h1 {
+            font-size: 4rem;
+            span {
+                color: $pink; 
+            }
+        }
+        button {
+            @include btn();
+        }
+    }
+}
+/*********
+unlimited
+*********/
+.unlimited {
+    padding: $padding;
+    @include flex(space-between, center,row);
+    article {
+        flex: 0 0 48%;
+        button {
+            @include btn();
+        }
     }
 }
