--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,6 +104,8 @@ footer {
     padding: $padding;
     p {
         color: $bela;
+        padding: 15px 0;
+        font-size: .8rem;
     }
     a {
         margin: 0 20px;
@@ -145,6 +147,29 @@ unlimited
         flex: 0 0 48%;
         button {
             @include btn();
+        }
+    }
+}
+/*********
+hivHeader
+*********/
+.hivHeader {
+    background: $tamnoPlava;
+    color: $bela;
+    padding: $padding;
+    .container {
+        @include flex(space-between,center,row);
+        div {
+            flex: 0 0 30%;
+            i {
+                color: $pink;
+                font-size: 4rem;
+                margin: 30px 0;
+            }
+            h3 {
+                margin: 0 0 30px 0;
+                font-size: 1.7rem;
+            }
         }
     }
 }
