--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,3 +173,46 @@ hivHeader
         }
     }
 }
+/*********
+artists
+*********/
+.artists {
+    padding: $padding;
+    article:first-child {
+        @include flex(space-between,flex-start,row);
+        h2 {
+            flex: 0 0 48%;
+        }
+        p {
+            flex: 0 0 48%;
+        }
+    }
+    article:last-child {
+        @include flex(space-between,center,row);
+        margin-top: 50px;
+        div {
+            flex: 0 0 22%;
+            text-align: center;
+            img {
+                width: 100%;
+                border-radius: 40px;
+            }
+        }
+    }
+}
+/*********
+artists
+*********/
+.concept {
+    @extend .artists;
+    article:last-child {
+        @include flex(space-between,center,row);
+        margin-top: 50px;
+        div {
+            flex: 0 0 15%;
+            img {
+                border-radius: 50px;
+            }
+        }
+    }
+}
