--- a/scss/style.css
+++ b/scss/style.css
@@ -55,6 +55,12 @@ h2 {
   line-height: 1.1;
 }
 
+@media (max-width: 767px) {
+  h2 {
+    font-size: 2rem;
+  }
+}
+
 /*********
 nav
 *********/
@@ -78,6 +84,27 @@ nav {
   padding: 30px 60px;
 }
 
+@media (max-width: 767px) {
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 20px;
+  }
+}
+
 nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -98,6 +125,12 @@ nav ul {
 
 nav ul li {
   margin-left: 50px;
+}
+
+@media (max-width: 767px) {
+  nav ul li {
+    margin: 10px;
+  }
 }
 
 /*********
@@ -144,10 +177,24 @@ header
           flex-direction: row;
 }
 
+@media (max-width: 767px) {
+  .mainHeader {
+    padding: 20px;
+  }
+}
+
 .mainHeader div {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 45%;
           flex: 0 0 45%;
+}
+
+@media (max-width: 767px) {
+  .mainHeader div {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
 }
 
 .mainHeader div img {
@@ -161,6 +208,12 @@ header
 
 .mainHeader div h1 span {
   color: #f91257;
+}
+
+@media (max-width: 767px) {
+  .mainHeader div h1 {
+    font-size: 2rem;
+  }
 }
 
 .mainHeader div button {
@@ -208,6 +261,14 @@ unlimited
   -webkit-box-flex: 0;
       -ms-flex: 0 0 48%;
           flex: 0 0 48%;
+}
+
+@media (max-width: 767px) {
+  .unlimited article {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
 }
 
 .unlimited article button {
@@ -262,6 +323,14 @@ hivHeader
           flex: 0 0 30%;
 }
 
+@media (max-width: 767px) {
+  .hivHeader .container div {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+}
+
 .hivHeader .container div i {
   color: #f91257;
   font-size: 4rem;
@@ -304,6 +373,14 @@ artists
           flex: 0 0 48%;
 }
 
+@media (max-width: 767px) {
+  .artists article:first-child h2, .concept article:first-child h2 {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+}
+
 .artists article:first-child p, .concept article:first-child p {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 48%;
@@ -336,13 +413,21 @@ artists
   text-align: center;
 }
 
+@media (max-width: 767px) {
+  .artists article:last-child div, .concept article:last-child div {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48%;
+            flex: 0 0 48%;
+  }
+}
+
 .artists article:last-child div img, .concept article:last-child div img {
   width: 100%;
   border-radius: 40px;
 }
 
 /*********
-artists
+concept
 *********/
 .concept article:last-child {
   display: -webkit-box;
@@ -369,7 +454,124 @@ artists
           flex: 0 0 15%;
 }
 
+@media (max-width: 767px) {
+  .concept article:last-child div {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    margin-bottom: 20px;
+  }
+}
+
 .concept article:last-child div img {
   border-radius: 50px;
+}
+
+@media (max-width: 767px) {
+  .concept article:last-child div img {
+    width: 80%;
+  }
+}
+
+/*************
+subscription
+*************/
+.subscription {
+  background: #0b193c;
+  padding: 80px 0;
+  color: white;
+}
+
+.subscription .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.subscription .container div:first-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 48%;
+          flex: 0 0 48%;
+}
+
+.subscription .container div:first-child h4 {
+  color: #f91257;
+  font-size: 2rem;
+  padding: 15px 0;
+}
+
+.subscription .container div:first-child button {
+  padding: 20px 40px;
+  font-size: 1rem;
+  background: #f91257;
+  color: white;
+  border: none;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin-top: 20px;
+  border-radius: 40px;
+  letter-spacing: 2px;
+}
+
+.subscription .container div:first-child button:hover {
+  background: #383c6e;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.subscription .container div:last-child {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 48%;
+          flex: 0 0 48%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+@media (max-width: 767px) {
+  .subscription .container div:last-child {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    margin-top: 30px;
+  }
+}
+
+.subscription .container div:last-child ul {
+  line-height: 3;
+}
+
+.subscription .container div:last-child ul li::before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f058";
+  margin-right: 10px;
+  color: #f91257;
 }
 /*# sourceMappingURL=style.css.map */
