--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,7 +77,11 @@ a {
 h2 {
     font-size: 3rem;
     line-height: 1.1;
+    @media(max-width: 767px) {
+        font-size: 2rem;
+    };
 }
+
 /*********
 nav
 *********/
@@ -85,6 +89,10 @@ nav {
     background: $navPlava;
     @include flex(space-between, center, row);
     padding: 30px 60px;
+    @media(max-width: 767px) {
+        @include flex(center,center,column);
+        padding: 20px;
+    };
     & > a {
         @extend .logo;
     }
@@ -92,6 +100,9 @@ nav {
         @include flex(space-between, center, row);
         li {
             margin-left: 50px;
+            @media(max-width: 767px) {
+                margin: 10px;
+            };
         }
     }
 }
@@ -120,8 +131,14 @@ header
     color: $bela;
     padding: 0 60px;
     @include flex(space-between, center, row);
+    @media(max-width: 767px) {
+        padding: 20px;
+    }
     div {
         flex: 0 0 45%;
+        @media(max-width: 767px) {
+            flex: 0 0 100%;
+        }
         img {
             width: 100%;
             padding: 30px 0;
@@ -130,6 +147,9 @@ header
             font-size: 4rem;
             span {
                 color: $pink; 
+            }
+            @media (max-width: 767px) {
+                font-size: 2rem;
             }
         }
         button {
@@ -145,6 +165,9 @@ unlimited
     @include flex(space-between, center,row);
     article {
         flex: 0 0 48%;
+        @media(max-width: 767px) {
+            flex: 0 0 100%;
+        };
         button {
             @include btn();
         }
@@ -161,6 +184,9 @@ hivHeader
         @include flex(space-between,center,row);
         div {
             flex: 0 0 30%;
+            @media(max-width: 767px) {
+                flex: 0 0 100%;
+            }
             i {
                 color: $pink;
                 font-size: 4rem;
@@ -182,6 +208,9 @@ artists
         @include flex(space-between,flex-start,row);
         h2 {
             flex: 0 0 48%;
+            @media(max-width: 767px) {
+                flex: 0 0 100%;
+            }
         }
         p {
             flex: 0 0 48%;
@@ -193,6 +222,9 @@ artists
         div {
             flex: 0 0 22%;
             text-align: center;
+            @media(max-width: 767px) {
+                flex: 0 0 48%;
+            }
             img {
                 width: 100%;
                 border-radius: 40px;
@@ -201,7 +233,7 @@ artists
     }
 }
 /*********
-artists
+concept
 *********/
 .concept {
     @extend .artists;
@@ -210,8 +242,57 @@ artists
         margin-top: 50px;
         div {
             flex: 0 0 15%;
+            @media(max-width: 767px) {
+                flex: 0 0 100%;
+                margin-bottom: 20px;
+            }
             img {
                 border-radius: 50px;
+                @media(max-width: 767px) {
+                    width: 80%;
+                }
+            }
+        }
+    }
+}
+/*************
+subscription
+*************/
+.subscription {
+    background: $tamnoPlava;
+    padding: $padding;
+    color: $bela;
+    .container {
+        @include flex(space-between,center,row);
+        div:first-child {
+            flex: 0 0 48%;
+            h4 {
+                color:$pink;
+                font-size: 2rem;
+                padding: 15px 0;
+            }
+            button {
+                @include btn;
+            }
+        }
+        div:last-child {
+            flex: 0 0 48%;
+            background: rgba($bela,.1);
+            border-radius: 30px;
+            padding: 30px;
+            @include flex(center,center,row);
+            @media(max-width: 767px) {
+                flex: 0 0 100%;
+                margin-top: 30px;
+            }
+            ul {
+                line-height: 3;
+                li::before {
+                    font-family: "Font Awesome 5 Free";
+                    content: "\f058";
+                    margin-right: 10px;
+                    color: $pink;
+                  }
             }
         }
     }
